# dawati-menus

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  configure.in
.tx/: config
desktop-files/: Accessories-More.directory.in  Advanced-More.directory.in  Advanced.directory.in  AllPrograms.directory.in  Development-More.directory.in  Documentation-More.directory.in  Documentation.directory.in  Games-More.directory.in  Graphics-More.directory.in  Internet-More.directory.in  Makefile.am  Media.directory.in  Multimedia-More.directory.in  Office-More.directory.in  Root.directory.in  Sawfish.directory.in  ServerConfig-More.directory.in  ServerConfig.directory.in  Settings-Moblin.directory.in  Settings-More.directory.in  System-More.directory.in  SystemConfig-More.directory.in  SystemConfig.directory.in  Utilities-More.directory.in  Utilities.directory.in
m4/: .gitignore
menus/: Makefile.am  applications.menu  preferences.menu  settings.menu
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  bg_BG.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  gu.po  he.po  hi.po  hi_IN.po  hu.po  id.po  it.po  ja.po  jp.po  km.po  ko.po  lo.po  lt.po  (+25 more)
