AC_INIT(desktop-files)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(moblin-menus, 0.1.7)

## intltool wants this
GETTEXT_PACKAGE=moblin-menus
AC_SUBST(GETTEXT_PACKAGE)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AM_MAINTAINER_MODE

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AM_GLIB_GNU_GETTEXT

AC_PROG_INTLTOOL

AS_ALL_LINGUAS

AC_OUTPUT([
Makefile
desktop-files/Makefile
menus/Makefile
po/Makefile.in
])
